fix overlapping menu dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,8 @@ header{
 .nav-box{
     max-width: 960px;
     margin: 0px auto;
+    z-index: 1000;
+    position: relative;
 }
 
 @media only screen and (max-width: 1024px) {
